# gtm-diligence-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
examples/: qid-6-request.json  qid-6-response.json  sample_request.json  sample_response.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  styles.css
gtm_diligence_assistant/: __init__.py  batch.py  build_index.py  config.py  dataset.py  docker_runtime.py  embeddings.py  evals.py  evaluation_metrics.py  llm.py  models.py  numeric_validation.py  scoring.py  task_planning.py  tools.py  vector_index.py  web_app.py  workbook.py  workflow.py
inputs/: diligence_eval_examples.jsonl  input.xlsx
tests/: test_batch.py  test_config.py  test_dataset.py  test_docker_runtime.py  test_evals.py  test_evaluation_metrics.py  test_numeric_validation.py  test_scoring.py  test_task_planning.py  test_tools.py  test_vector_index.py  test_web_app.py  test_workflow.py
